fix icon alignment

--- a/assets/css/ot-admin-rtl.css
+++ b/assets/css/ot-admin-rtl.css
@@ -1,8 +1,8 @@
 /* -------------------------------------------------- 
   :: OptionTree Font
   ---------------------------------------------------*/
-.ui-tabs li a [class^="ot-icon-"], 
-.ui-tabs li a [class*=" ot-icon-"] {
+.ui-tabs li > a [class^="ot-icon-"], 
+.ui-tabs li > a [class*=" ot-icon-"] {
   display: block;
   height: 14px;
   float: right;
